--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
       <div class="products-items" *ngFor="let product of productsData">
         <div class="products-item">
           <div class="products-item-image">
-            <img src="./assets/images/{{product.image}}" alt="Product">
+            <img src="{{product.image}}" alt="Product">
           </div>
           <div class="products-item-details">
             <div class="products-item-title">{{product.title}}</div>
